--- a/about.html
+++ b/about.html
@@ -15,10 +15,10 @@
         <h1 class="logo">IU Coffee</h1>
       </figure>
       <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="promo.html">Promotions</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html" class="active">About</a></li>
         <li><a href="order.html">Order</a></li>
         <li><a href="map.html">Map</a></li>
       </ul>
@@ -63,14 +63,14 @@
 
     <section id="team">
       <h2>Meet Our Foundation</h2>
-      <section class="team-grid">
+      <div class="team-grid">
         <article class="team-member">
           <header>
             <h3>Phan Tran Anh Quan</h3>
             <p>Founder & Head Barista</p>
           </header>
         </article>
-      </section>
+      </div>
     </section>
 
     <section id="fun-fact">
@@ -81,12 +81,12 @@
   </main>
 
   <footer class="site-footer">
-    <section class="footer-content">
+    <div class="footer-content">
       <p>&copy; 2025 IU Coffee. All rights reserved.</p>
       <nav>
-        <a href="policy.html">Privacy Policy</a>
+        <a href="policy.html">Privacy Policy</a> 
       </nav>
-    </section>
+    </div>
   </footer>
 </body>
 </html>
