--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IU Coffee - Where Every Cup Tells a Story</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <link rel="stylesheet" href="assets/css/index.css" />
-  <link rel="icon" type="image/png" href="assets/img/IU.png" />
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/index.css">
+  <link rel="icon" type="image/png" href="assets/img/IU.png">
 </head>
 <body>
   <header>
@@ -41,10 +41,10 @@
         <p class="intro">Our beans are ethically sourced, freshly roasted, and served with love — because every cup deserves a story.</p>
       </header>
 
-      <section class="product-grid">
+      <div class="product-grid">
         <article class="card">
           <figure>
-            <img src="assets/img/home/latte.jpg" alt="Signature Latte" />
+            <img src="assets/img/home/latte.jpg" alt="Signature Latte">
             <figcaption>
               <h3>Signature Latte</h3>
               <p>Our campus classic — smooth espresso and steamed milk crafted to perfection.</p>
@@ -55,7 +55,7 @@
 
         <article class="card">
           <figure>
-            <img src="assets/img/home/cold-brew.jpg" alt="Cold Brew" />
+            <img src="assets/img/home/cold-brew.jpg" alt="Cold Brew">
             <figcaption>
               <h3>Cold Brew</h3>
               <p>Brewed slowly for 16 hours to unlock delicious, deep flavor and a refreshing finish.</p>
@@ -66,7 +66,7 @@
 
         <article class="card">
           <figure>
-            <img src="assets/img/home/cappuchino.jpg" alt="Cappuccino Delight" />
+            <img src="assets/img/home/cappuchino.jpg" alt="Cappuccino Delight">
             <figcaption>
               <h3>Cappuccino Delight</h3>
               <p>A perfect harmony of espresso, milk, and foam — the taste that started it all.</p>
@@ -74,7 +74,7 @@
             </figcaption>
           </figure>
         </article>
-      </section>
+      </div>
     </section>
 
     <section class="quality">
@@ -82,7 +82,7 @@
         <h2>Our Mission: Coffee, Community, and Care</h2>
       </header>
 
-      <section class="features">
+      <div class="features">
         <article class="feature-box">
           <h3>Fresh & Sustainable</h3>
           <p>We roast in small batches using responsibly sourced beans for top-quality brews.</p>
@@ -95,7 +95,7 @@
           <h3>Eco-Friendly Promise</h3>
           <p>We use recyclable cups, eco-packaging, and strive toward zero waste daily.</p>
         </article>
-      </section>
+      </div>
     </section>
 
     <section class="articles">
@@ -103,10 +103,10 @@
         <h2>Stories from IU Coffee</h2>
       </header>
 
-      <section class="article-grid">
+      <div class="article-grid">
         <article>
           <figure>
-            <img src="assets/img/home/campus-coffee.jpg" alt="Campus Coffee" />
+            <img src="assets/img/home/campus-coffee.jpg" alt="Campus Coffee">
             <figcaption>
               <h3>From Campus Corner to Community Hub</h3>
               <p>Discover how a small student café grew into a local favorite in just a few years.</p>
@@ -116,14 +116,14 @@
 
         <article>
           <figure>
-            <img src="assets/img/home/coffee-field.jpg" alt="Coffee field" />
+            <img src="assets/img/home/coffee-field.jpg" alt="Coffee field">
             <figcaption>
               <h3>Brewing a Greener Future</h3>
               <p>Our commitment to sustainability and ethical sourcing in every single bean.</p>
             </figcaption>
           </figure>
         </article>
-      </section>
+      </div>
 
       <footer>
         <a href="about.html" class="btn">Learn More About Us</a>
@@ -132,12 +132,12 @@
   </main>
 
   <footer class="site-footer">
-    <section class="footer-content">
+    <div class="footer-content">
       <p>&copy; 2025 IU Coffee. All rights reserved.</p>
       <nav>
         <a href="policy.html">Privacy Policy</a> 
       </nav>
-    </section>
+    </div>
   </footer>
 </body>
 </html>
