--- a/map.html
+++ b/map.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Find Us | IU Coffee</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <link rel="stylesheet" href="assets/css/map.css" />
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/map.css">
 </head>
 <body>
   <header>
@@ -50,22 +50,22 @@
         <figcaption>Find us on Google Maps</figcaption>
       </figure>
 
+      <h3>IU Coffee</h3>
       <address class="card">
-        <h3>IU Coffee</h3>
         <p>William Shakespear Street, Thủ Đức District</p>
         <p>Near IU University, Ho Chi Minh City, Vietnam</p>
-        
-        <section class="contact-info">
-          <article class="contact-item">
-            <h3>Phone</h3>
-            <p><a href="tel:+84123456789">+84 123 456 789</a></p>
-          </article>
-          <article class="contact-item">
-            <h3>Email</h3>
-            <p><a href="mailto:info@iucoffee.com">info@iucoffee.com</a></p>
-          </article>
-        </section>
       </address>
+      
+      <div class="contact-info card">
+        <section class="contact-item">
+          <h4>Phone</h4>
+          <p><a href="tel:+84123456789">+84 123 456 789</a></p>
+        </section>
+        <section class="contact-item">
+          <h4>Email</h4>
+          <p><a href="mailto:info@iucoffee.com">info@iucoffee.com</a></p>
+        </section>
+      </div>
 
       <section class="card" aria-labelledby="hours-heading">
         <h2 id="hours-heading">Opening Hours</h2>
@@ -93,12 +93,12 @@
   </main>
 
   <footer class="site-footer">
-    <section class="footer-content">
+    <div class="footer-content">
       <p>&copy; 2025 IU Coffee. All rights reserved.</p>
-      <nav aria-label="Footer Navigation">
+      <nav>
         <a href="policy.html">Privacy Policy</a> 
       </nav>
-    </section>
+    </div>
   </footer>
 </body>
 </html>
