--- a/menu.html
+++ b/menu.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IU Coffee Menu</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <link rel="stylesheet" href="assets/css/menu.css" />
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/menu.css">
 </head>
 <body>
   <header>
@@ -51,12 +51,7 @@
       </nav>
     </aside>
 
-    <section>
-      <header class="menu-header">
-        <h1>Our Coffee Menu</h1>
-        <p>Explore our handcrafted drinks made from ethically sourced beans and premium ingredients.</p>
-      </header>
-
+    <div>
       <section id="espresso">
         <h2>☕ Espresso Classics</h2>
         <ul class="menu-list">
@@ -150,12 +145,16 @@
           <li><h3>Lavender Tea</h3><p>Relaxing floral blend to calm your mind and senses.</p><a href="order.html" class="price">$3.80</a></li>
         </ul>
       </section>
-    </section>
+    </div>
   </main>
 
   <footer class="site-footer">
-    <p>&copy; 2025 IU Coffee. All rights reserved.</p>
-    <nav><a href="policy.html">Privacy Policy</a></nav>
+    <div class="footer-content">
+      <p>&copy; 2025 IU Coffee. All rights reserved.</p>
+      <nav>
+        <a href="policy.html">Privacy Policy</a> 
+      </nav>
+    </div>
   </footer>
 </body>
 </html>
