--- a/policy.html
+++ b/policy.html
@@ -15,7 +15,7 @@
         <h1 class="logo">IU Coffee</h1>
       </figure>
       <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="promo.html">Promotions</a></li>
         <li><a href="about.html">About</a></li>
@@ -86,14 +86,13 @@
       <p id="confirmMsg" style="display:none; color:green; font-weight:bold;">✅ Thank you for accepting our policy.</p>
     </section>
   </main>
-
   <footer class="site-footer">
-    <section class="footer-content">
+    <div class="footer-content">
       <p>&copy; 2025 IU Coffee. All rights reserved.</p>
       <nav>
         <a href="policy.html">Privacy Policy</a> 
       </nav>
-    </section>
+    </div>
   </footer>
 </body>
 </html>
