--- a/promo.html
+++ b/promo.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Promotions - Mountain Coffee</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <link rel="stylesheet" href="assets/css/promo.css" />
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Promotions | IU Coffee</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/promo.css">
 </head>
 <body>
   <header>
@@ -15,9 +15,9 @@
         <h1 class="logo">IU Coffee</h1>
       </figure>
       <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
-        <li><a href="promo.html">Promotions</a></li>
+        <li><a href="promo.html" class="active">Promotions</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="order.html">Order</a></li>
         <li><a href="map.html">Map</a></li>
@@ -38,7 +38,7 @@
       <header>
         <h2>🎉 Current Offers</h2>
       </header>
-      <section class="promo-grid">
+      <div class="promo-grid">
         <article class="promo-card">
           <figure>
             <figcaption class="promo-info">
@@ -78,7 +78,7 @@
             </figcaption>
           </figure>
         </article>
-      </section>
+      </div>
     </section>
 
     <section class="promo-event">
@@ -93,12 +93,12 @@
   </main>
 
   <footer class="site-footer">
-    <section class="footer-content">
+    <div class="footer-content">
       <p>&copy; 2025 IU Coffee. All rights reserved.</p>
       <nav>
         <a href="policy.html">Privacy Policy</a> 
       </nav>
-    </section>
+    </div>
   </footer>
 </body>
 </html>
