add seo meta tag

--- a/about.html
+++ b/about.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us | IU Coffee</title>
+  
+  <meta name="description" content="Learn about IU Coffee's story, mission and values. Founded by coffee-loving students at IU University in 2020, we offer sustainable coffee in a community atmosphere.">
+  <meta name="keywords" content="IU Coffee, coffee shop story, sustainable coffee, campus coffee shop, coffee mission, about IU Coffee">
+  <meta name="author" content="IU Coffee">
+  
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/about.css">
 </head>
