--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IU Coffee - Where Every Cup Tells a Story</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="IU Coffee offers ethically sourced, freshly roasted coffee in a cozy campus atmosphere. Visit our shop near IU University for handcrafted coffee and community.">
+  <meta name="keywords" content="IU Coffee, campus coffee, ethically sourced coffee, coffee shop, university coffee">
+  <meta name="author" content="IU Coffee">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.iucoffee.com/">
+  <meta property="og:title" content="IU Coffee - Where Every Cup Tells a Story">
+  <meta property="og:description" content="Born on campus, brewed with passion — experience warmth and creativity in every sip at IU Coffee.">
+  <meta property="og:image" content="https://www.iucoffee.com/assets/img/home/campus-coffee.jpg">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.iucoffee.com/">
+  <meta property="twitter:title" content="IU Coffee - Where Every Cup Tells a Story">
+  <meta property="twitter:description" content="Born on campus, brewed with passion — experience warmth and creativity in every sip at IU Coffee.">
+  <meta property="twitter:image" content="https://www.iucoffee.com/assets/img/home/campus-coffee.jpg">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.iucoffee.com/">
+  
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/index.css">
   <link rel="icon" type="image/png" href="assets/img/IU.png">
@@ -44,7 +67,7 @@
       <div class="product-grid">
         <article class="card">
           <figure>
-            <img src="assets/img/home/latte.jpg" alt="Signature Latte">
+            <img src="assets/img/home/latte.jpg" alt="Signature Latte" loading="lazy">
             <figcaption>
               <h3>Signature Latte</h3>
               <p>Our campus classic — smooth espresso and steamed milk crafted to perfection.</p>
@@ -55,7 +78,7 @@
 
         <article class="card">
           <figure>
-            <img src="assets/img/home/cold-brew.jpg" alt="Cold Brew">
+            <img src="assets/img/home/cold-brew.jpg" alt="Cold Brew" loading="lazy">
             <figcaption>
               <h3>Cold Brew</h3>
               <p>Brewed slowly for 16 hours to unlock delicious, deep flavor and a refreshing finish.</p>
@@ -66,7 +89,7 @@
 
         <article class="card">
           <figure>
-            <img src="assets/img/home/cappuchino.jpg" alt="Cappuccino Delight">
+            <img src="assets/img/home/cappuchino.jpg" alt="Cappuccino Delight" loading="lazy">
             <figcaption>
               <h3>Cappuccino Delight</h3>
               <p>A perfect harmony of espresso, milk, and foam — the taste that started it all.</p>
@@ -106,7 +129,7 @@
       <div class="article-grid">
         <article>
           <figure>
-            <img src="assets/img/home/campus-coffee.jpg" alt="Campus Coffee">
+            <img src="assets/img/home/campus-coffee.jpg" alt="Campus Coffee" loading="lazy">
             <figcaption>
               <h3>From Campus Corner to Community Hub</h3>
               <p>Discover how a small student café grew into a local favorite in just a few years.</p>
@@ -116,7 +139,7 @@
 
         <article>
           <figure>
-            <img src="assets/img/home/coffee-field.jpg" alt="Coffee field">
+            <img src="assets/img/home/coffee-field.jpg" alt="Coffee field" loading="lazy">
             <figcaption>
               <h3>Brewing a Greener Future</h3>
               <p>Our commitment to sustainability and ethical sourcing in every single bean.</p>
