--- a/map.html
+++ b/map.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Find Us | IU Coffee</title>
+  
+  <meta name="description" content="Visit IU Coffee near IU University in Ho Chi Minh City. Find our location, opening hours, and contact details to plan your visit.">
+  <meta name="keywords" content="IU Coffee location, coffee shop near IU University, Ho Chi Minh City coffee, coffee shop map, coffee shop hours">
+  <meta name="author" content="IU Coffee">
+  
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/map.css">
 </head>
