--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IU Coffee Menu</title>
+  
+  <meta name="description" content="Explore IU Coffee's handcrafted menu of espresso classics, milk coffees, iced coffees, specialty drinks, and premium teas. Made from ethically sourced beans.">
+  <meta name="keywords" content="coffee menu, espresso, latte, cappuccino, cold brew, milk tea, iced coffee, specialty coffee, IU Coffee">
+  <meta name="author" content="IU Coffee">
+  
+
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/menu.css">
 </head>
