--- a/order.html
+++ b/order.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Order Form | IU Coffee</title>
+
+  <meta name="description" content="Order your favorite coffee drinks online from IU Coffee. Customize your order with our wide selection of coffees, teas, and specialty drinks.">
+  <meta name="keywords" content="coffee order, online coffee ordering, IU Coffee order, custom coffee, coffee delivery, coffee pickup">
+  <meta name="author" content="IU Coffee">
+  
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/order.css">
 </head>
