--- a/policy.html
+++ b/policy.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy & Terms of Use | IU Coffee</title>
+  
+  <meta name="description" content="Read IU Coffee's privacy policy and terms of use. Learn how we protect your data and the conditions for using our website and services.">
+  <meta name="keywords" content="privacy policy, terms of use, IU Coffee policy, data protection, website terms">
+  <meta name="author" content="IU Coffee">
+  
   <link rel="stylesheet" href="assets/css/policy.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <header>
