--- a/promo.html
+++ b/promo.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Promotions | IU Coffee</title>
+  
+  <meta name="description" content="Discover exclusive coffee promotions at IU Coffee including happy hour deals, seasonal specials, and loyalty rewards. Limited-time offers available now!">
+  <meta name="keywords" content="coffee promotions, happy hour, coffee discounts, IU Coffee deals, seasonal coffee, loyalty rewards">
+  <meta name="author" content="IU Coffee">
+
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/promo.css">
 </head>
